@@ -1,5 +1,7 @@
-2636 [Audio Encoder]        Bug #826: cosmetic change
-2635 [Profile]              Bug #842: fixed import & export of profiles (regression of 2590)
+2637 [VobSubber]            each track will be demuxed into a dedicated file set to avoid missing tracks when muxing. Bug #845
+     [VobSubber]+[OneClick] for multiple tracks the source will only be indexed once
+2636 [Audio Encoder]        cosmetic change. Bug #826
+2635 [Profile]              fixed import & export of profiles (regression of 2590). Bug #842
 2634 [L-SMASH Indexer]      added support for MSVC 2015 runtimes
 2633                        updated the wiki links to point to https://en.wikibooks.org/wiki/MeGUI
 2631 [MediaInfo]            improved DVD audio track language detection
